# Polarib

./: .gitignore  CMakeLists.txt  README.md
dbg_utils/: CMakeLists.txt
dbg_utils/include/dbg_utils/: assertion.h  logger.h
graphics/: CMakeLists.txt
graphics/include/graphics/: window.h
graphics/src/: window.cpp
platform/: CMakeLists.txt
platform/include/platform/: window.h
platform/src/: window.cpp
pololib/: CMakeLists.txt
pololib/core/: CMakeLists.txt
pololib/core/include/core/: application.h  config.h  events.h  graphics_context.h  window.h
pololib/core/include/core/commands/: base_command.h  command_system.h
pololib/core/include/core/events/: base_event.h  click_down_event.h  click_event.h  click_release_event.h  cursor_enter_event.h  cursor_exit_event.h  cursor_move_event.h  event.h  event_system.h  events.h  key_press_event.h  key_release_event.h  layer.h  layer_stack.h  scroll_event.h  window_close_event.h  window_resize_event.h
pololib/core/include/core/layers/: base_layer.h  layer_stack.h
pololib/core/src/: application.cpp  window.cpp
pololib/core/src/commands/: command_system.cpp
pololib/core/src/events/: event_system.cpp  layer.cpp  layer_stack.cpp
pololib/core/src/layers/: layer_stack.cpp
pololib/dbg/: CMakeLists.txt
pololib/dbg/include/dbg/: assert.h  assertions.h  logger.h  logs.h
pololib/dbg/src/: logger.cpp
pololib/dependencies/: CMakeLists.txt
pololib/graphics/: CMakeLists.txt
pololib/graphics/include/graphics/: opengl_context.h
pololib/graphics/include/graphics/opengl/: opengl_context.h
pololib/graphics/src/: opengl_context.cpp
pololib/graphics/src/opengl/: opengl_context.cpp
pololib/platform/: CMakeLists.txt
pololib/platform/include/platform/: window.h  window_glfw.h
pololib/platform/include/platform/glfw/: glfw_config.h  window_glfw.h
pololib/platform/src/: window.cpp  window_glfw.cpp
pololib/platform/src/glfw/: window_glfw.cpp
